crates/solidity/testing/snapshots/bindings_output/built_ins/type_expr/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:11:28]
    │
 11 │         string memory v1 = type(Sample).name;
    │                            ────────┬────────  
    │                                    ╰────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:12:27]
    │
 12 │         bytes memory v2 = type(Sample).creationCode;
    │                           ────────────┬────────────  
    │                                       ╰────────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:13:27]
    │
 13 │         bytes memory v3 = type(Sample).runtimeCode;
    │                           ────────────┬───────────  
    │                                       ╰───────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:15:28]
    │
 15 │         string memory v4 = type(ISample).name;
    │                            ─────────┬────────  
    │                                     ╰────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:16:21]
    │
 16 │         bytes4 v5 = type(ISample).interfaceId;
    │                     ────────────┬────────────  
    │                                 ╰────────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:18:24]
    │
 18 │         Direction v6 = type(Direction).min;
    │                        ─────────┬─────────  
    │                                 ╰─────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:19:24]
    │
 19 │         Direction v7 = type(Direction).max;
    │                        ─────────┬─────────  
    │                                 ╰─────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:21:19]
    │
 21 │         uint v8 = type(uint).min;
    │                   ───────┬──────  
    │                          ╰──────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:22:19]
    │
 22 │         uint v9 = type(uint).max;
    │                   ───────┬──────  
    │                          ╰──────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:24:29]
    │
 24 │         string memory v10 = type(Utils).name;
    │                             ────────┬───────  
    │                                     ╰───────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:25:28]
    │
 25 │         bytes memory v11 = type(Utils).creationCode;
    │                            ────────────┬───────────  
    │                                        ╰───────────── Error occurred here.
────╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:26:28]
    │
 26 │         bytes memory v12 = type(Utils).runtimeCode;
    │                            ───────────┬───────────  
    │                                       ╰───────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Sample {}
    │          ───┬──  
    │             ╰──── name: 1
    │ 
  3 │ interface ISample {}
    │           ───┬───  
    │              ╰───── name: 2
    │ 
  5 │ library Utils {}
    │         ──┬──  
    │           ╰──── name: 3
    │ 
  7 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 4
  8 │     enum Direction { North, South, West, East }
    │          ────┬────   ──┬──  ──┬──  ──┬─  ──┬─  
    │              ╰───────────────────────────────── name: 5
    │                        │      │      │     │   
    │                        ╰─────────────────────── name: 6
    │                               │      │     │   
    │                               ╰──────────────── name: 7
    │                                      │     │   
    │                                      ╰───────── name: 8
    │                                            │   
    │                                            ╰─── name: 9
    │ 
 10 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 10
 11 │         string memory v1 = type(Sample).name;
    │                       ─┬  
    │                        ╰── name: 11
 12 │         bytes memory v2 = type(Sample).creationCode;
    │                      ─┬  
    │                       ╰── name: 12
 13 │         bytes memory v3 = type(Sample).runtimeCode;
    │                      ─┬  
    │                       ╰── name: 13
    │ 
 15 │         string memory v4 = type(ISample).name;
    │                       ─┬  
    │                        ╰── name: 14
 16 │         bytes4 v5 = type(ISample).interfaceId;
    │                ─┬  
    │                 ╰── name: 15
    │ 
 18 │         Direction v6 = type(Direction).min;
    │         ────┬──── ─┬  
    │             ╰───────── ref: 5
    │                    │  
    │                    ╰── name: 16
 19 │         Direction v7 = type(Direction).max;
    │         ────┬──── ─┬  
    │             ╰───────── ref: 5
    │                    │  
    │                    ╰── name: 17
    │ 
 21 │         uint v8 = type(uint).min;
    │              ─┬  
    │               ╰── name: 18
 22 │         uint v9 = type(uint).max;
    │              ─┬  
    │               ╰── name: 19
    │ 
 24 │         string memory v10 = type(Utils).name;
    │                       ─┬─  
    │                        ╰─── name: 20
 25 │         bytes memory v11 = type(Utils).creationCode;
    │                      ─┬─  
    │                       ╰─── name: 21
 26 │         bytes memory v12 = type(Utils).runtimeCode;
    │                      ─┬─  
    │                       ╰─── name: 22
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │             │     contract Sample {}
    │             │     ─────────┬─────────  
    │             │              ╰─────────── definiens: 1
  2 │             ╭───▶ 
  3 │             ├─│ ▶ interface ISample {}
    │             │ │                          
    │             ╰──────────────────────────── definiens: 2
  4 │               ╭─▶ 
  5 │ │             ├─▶ library Utils {}
    │ │             │                      
    │ │             ╰────────────────────── definiens: 3
  6 │ ╭───────────────▶ 
    ┆ ┆                 
  8 │ │ │                   enum Direction { North, South, West, East }
    │ │ │               ───────────────────────┬┬─────┬──────┬─────┬────  
    │ │ │                                      ╰────────────────────────── definiens: 6
    │ │ │                                       │     │      │     │      
    │ │ │                                       ╰───────────────────────── definiens: 5
    │ │ │                                             │      │     │      
    │ │ │                                             ╰─────────────────── definiens: 7
    │ │ │                                                    │     │      
    │ │ │                                                    ╰──────────── definiens: 8
    │ │ │                                                          │      
    │ │ │                                                          ╰────── definiens: 9
  9 │ │ ╭─────────────▶ 
    ┆ ┆ ┆               
 11 │ │ │                       string memory v1 = type(Sample).name;
    │ │ │               ───────────────────────┬──────────────────────  
    │ │ │                                      ╰──────────────────────── definiens: 11
 12 │ │ │                       bytes memory v2 = type(Sample).creationCode;
    │ │ │               ──────────────────────────┬──────────────────────────  
    │ │ │                                         ╰──────────────────────────── definiens: 12
 13 │ │ │ │                     bytes memory v3 = type(Sample).runtimeCode;
    │ │ │ │             ──────────────────────────┬─────────────────────────  
    │ │ │ │                                       ╰─────────────────────────── definiens: 13
 14 │ │ │ ╭───────────▶ 
 15 │ │ │ ├───────────▶         string memory v4 = type(ISample).name;
    │ │ │ │                                                              
    │ │ │ ╰────────────────────────────────────────────────────────────── definiens: 14
 16 │ │ │     │                 bytes4 v5 = type(ISample).interfaceId;
    │ │ │     │         ───────────────────────┬───────────────────────  
    │ │ │     │                                ╰───────────────────────── definiens: 15
 17 │ │ │     ╭───────▶ 
 18 │ │ │     ├───────▶         Direction v6 = type(Direction).min;
    │ │ │     │                                                       
    │ │ │     ╰─────────────────────────────────────────────────────── definiens: 16
 19 │ │ │       │               Direction v7 = type(Direction).max;
    │ │ │       │       ──────────────────────┬─────────────────────  
    │ │ │       │                             ╰─────────────────────── definiens: 17
 20 │ │ │       ╭─────▶ 
 21 │ │ │       ├─────▶         uint v8 = type(uint).min;
    │ │ │       │                                           
    │ │ │       ╰─────────────────────────────────────────── definiens: 18
 22 │ │ │   │                   uint v9 = type(uint).max;
    │ │ │   │           ─────────────────┬────────────────  
    │ │ │   │                            ╰────────────────── definiens: 19
 23 │ │ │   ╭─────────▶ 
 24 │ │ │   ├─────────▶         string memory v10 = type(Utils).name;
    │ │ │   │                                                           
    │ │ │   ╰─────────────────────────────────────────────────────────── definiens: 20
 25 │ │ │                       bytes memory v11 = type(Utils).creationCode;
    │ │ │               ──────────────────────────┬──────────────────────────  
    │ │ │                                         ╰──────────────────────────── definiens: 21
 26 │ │ │                       bytes memory v12 = type(Utils).runtimeCode;
    │ │ │               ──────────────────────────┬─────────────────────────  
    │ │ │                                         ╰─────────────────────────── definiens: 22
 27 │ │ ├─────────────▶     }
    │ │ │                       
    │ │ ╰─────────────────────── definiens: 10
 28 │ ├───────────────▶ }
    │ │                     
    │ ╰───────────────────── definiens: 4
────╯
